<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity">

    <TextView
        android:id="@+id/add_item_txt_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/add_expense_txt"
        android:textSize="24sp"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        android:fontFamily=""
        app:layout_constraintBottom_toTopOf="@id/item_name_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/item_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/add_item_description_txt"
        android:inputType="textImeMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/item_amount_edit_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_item_txt_view" />

    <EditText
        android:id="@+id/item_amount_edit_txt"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/enter_item_amount_txt"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintaTop_toBottomOf="@id/item_name_edit_text"

        tools:layout_editor_absoluteY="140dp" />

    <TextView
        android:id="@+id/categories_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/categories_text_view"
        app:layout_constraintBottom_toTopOf="@id/categories_layout_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="18sp"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/item_amount_edit_txt" />

    <LinearLayout
        android:id="@+id/categories_layout_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="200dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/categories_text_view">

        <LinearLayout
            android:id="@+id/food_category_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/health_category_linear_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_amount_edit_txt">

            <ImageView
                android:id="@+id/food_icon"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:contentDescription="food"
                android:src="@mipmap/food_round" />

            <TextView
                android:id="@+id/food_category_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/food_category_text"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/is_food_cat_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/health_category_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/transport_category_linear_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/food_category_linear_layout">

            <ImageView
                android:id="@+id/health_icon"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:contentDescription="health"
                android:src="@mipmap/health_round" />

            <TextView
                android:id="@+id/health_category_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/health_category_text"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/is_health_cat_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/transport_category_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/bill_category_linear_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/health_category_linear_layout">

            <ImageView
                android:id="@+id/transport_icon"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:contentDescription="transport"
                android:src="@mipmap/transport_round" />

            <TextView
                android:id="@+id/transport_category_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transport_category_text"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/is_transport_cat_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:checked="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bill_category_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/health_category_linear_layout">

            <ImageView
                android:id="@+id/bills_icon"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:contentDescription="bills"
                android:src="@mipmap/bills_round" />

            <TextView
                android:id="@+id/bill_category_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bill_category_text"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/is_bill_cat_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="30dp"
        android:padding="19dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories_layout_view">

        <Button
            android:id="@+id/add_item_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:text="@string/add_btn_text"
            style="@style/ThemeOverlay.Material3.Button.ElevatedButton"/>

        <Button
            android:id="@+id/cancel_item_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn_text"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
